<resources>
    <string name="app_name">Qual o Sabor</string>
    <string name="txtUsuario">Usuário</string>
    <string name="txtNewUsuario">Cadastrar Usuário</string>
    <string name="cadastroEmpresa">Cadastrar Empresa</string>
    <string name="razaoSocial">Razão Social</string>
    <string name="cnpj">CNPJ</string>
    <string name="btnBuscaEmpresa">Buscar Empresas</string>
    <string name="nomeApp">Qual é o Sabor?</string>
    <string name="empresa">EMPRESA</string>
    <string name="cliente">CLIENTE</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrar">REGISTRAR-SE</string>
    <string name="nomeFantasia">Nome Fantasia</string>
    <string name="cep">CEP</string>
    <string name="uf">UF</string>
    <string name="municipio">Município</string>
    <string name="emai">E-mail</string>
    <string name="avancar">AVANÇAR</string>
    <string name="confirmacao">Digite o código de verificação  que você recebeu em seu e-mail:</string>
    <string name="codigo">Código</string>
    <string name="confirma">CONFIRMAR</string>
    <string name="usuario">Usuário</string>
    <string name="title_activity_confirma_cadastro">ConfirmaCadastro</string>
    <string name="title_activity_menu_empresa_teste">MenuEmpresaTeste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_empresa">Menu Empresa</string>
    <string name="facebook_app_id">2214108191935259</string>
    <string name="fb_login_protocol_scheme">fb2214108191935259</string>
    <string name="title_activity_add_qrcode">add_qrcode</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="cancelar">Cancelar</string>
    <string name="opcoes">Opções</string>
    <string name="confExcluir">Deseja realmente Excluir?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
</resources>
